--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -1,16 +1,85 @@
+.container {
+    overflow: hidden;
+}
+
 .card {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: rgb(59, 27, 27);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     width: 100%;
     height: 100%;
     color: white;
     text-align: center;
-    transition: all 0.3s;
+    transition: transform 0.3s;
+    cursor: pointer;
+    position: relative;
+    transition: 0.3s all;
+}
+
+.card:hover {
+    transform: scale(1.05);
+}
+
+.card:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.4);
+}
+
+.card h2 {
+    font-size: 50px;
+    z-index: 1;
+    opacity: 0;
+    text-shadow: 0px 0px 100px rgb(0, 0, 0, 1);
+    transition: 0.7s all;
+}
+
+.card h3 {
+    font-size: 30px;
+    z-index: 1;
+    opacity: 0;
+    color: rgba(255, 255, 255, 0.6);
+    text-shadow: 0px 0px 100px rgb(0, 0, 0, 1);
+    transition: 0.7s all;
+}
+.card:hover h3, .card:hover h2 {
+    opacity: 1; /* Torna visível quando o mouse passar sobre o card */
   }
-  .card:hover{
-    transform: scale(1.1);
-  }
-  
+
+/* Overlay para exibir o vídeo */
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
+
+.videoContainer {
+    position: relative;
+    width: 80%;
+    /* 80% da largura da tela */
+    max-width: 1500px;
+    /* Tamanho máximo */
+    aspect-ratio: 16 / 9;
+    /* Mantém a proporção do YouTube */
+    margin: auto;
+}
+
+.videoFrame {
+    width: 100%;
+    height: 100%;
+}
